--- a/src/styles/List.scss
+++ b/src/styles/List.scss
@@ -4,25 +4,38 @@
   overflow-y: scroll;
   &__list {
     height: 200px;
-    max-width: 700px;
-    border:2px solid black;
+    width: 80%;
+    border: 2px solid black;
     border-radius: 5px;
-    margin:40px auto 70px auto;
-    display:grid;
-    grid-template-columns: 0.35fr 2px 0.65fr;
-    grid-template-rows:0.4fr 0.2fr 0.2fr 0.2fr;
-    grid-template-areas: 
-    "name line description"
-    "name line ."
-    "language line link"
-    ". line update";
+    margin: 40px auto 70px auto;
+    display: grid;
+    grid-template-columns: 0.4fr 2px 0.6fr;
+    grid-template-rows: 0.4fr 0.2fr 0.2fr 0.2fr;
+    grid-template-areas:
+      "name line description"
+      "name line ."
+      "language line link"
+      ". line update";
+    @media (max-width: 680px) {
+      grid-template-columns: 0.6fr 0.4fr;
+      grid-template-rows: 0.33fr 0.33fr 0.33fr;
+      grid-template-areas:
+        "name name"
+        "description description"
+        "link update";
+    }
   }
 }
 
 .center {
-  display:grid;
+  display: grid;
   align-items: center;
   justify-content: center;
+}
+.left {
+  display: grid;
+  align-items: center;
+  justify-content: start;
 }
 
 .name {
@@ -32,54 +45,85 @@
   font-weight: bold;
   font-size: 20px;
   align-items: end;
+  @media (max-width: 680px) {
+    justify-content: start;
+    padding-left: 30px;
+  }
+  &__language__tag {
+    background: black;
+    padding: 2px 8px;
+    color: #eee;
+    border-radius: 10px;
+    font-size: 15px;
+    display: none;
+    @media (max-width: 680px) {
+      display: unset;
+    }
+  }
 }
 .line {
   @extend .center;
   grid-area: line;
-  width:100%;
-  height:100%;
+  width: 100%;
+  height: 100%;
   padding: 10px 0;
+  @media (max-width: 680px) {
+    display: none;
+  }
   .black-line {
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
     background: black;
     border: 1px solid black;
     border-radius: 1px;
   }
 }
 .description {
-  padding-left:30px;
-  padding-right:30px;
+  padding-left: 30px;
+  padding-right: 30px;
   display: grid;
-  justify-content:start;
+  justify-content: start;
   align-items: end;
   grid-area: description;
 }
 .update {
-  padding-right:10px;
-  padding-bottom:10px;
-  display:grid;
-  justify-content:end;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  display: grid;
+  justify-content: end;
   align-items: end;
   grid-area: update;
-  font-size:13px;
-  color:#666;
+  font-size: 13px;
+  color: #666;
+  @media (max-width: 680px) {
+    padding-right: 3px;
+    padding-bottom: 3px;
+  }
 }
 .language {
   @extend .center;
   grid-area: language;
+  @media (max-width: 680px) {
+    display: none;
+  }
   &__tag {
     background: black;
-    padding:2px 8px;
-    color:#EEE;
+    padding: 2px 8px;
+    color: #eee;
     border-radius: 10px;
-    font-size:15px;
+    font-size: 15px;
   }
 }
 .link {
   @extend .center;
-  padding-left:30px;
-  justify-content:start;
+  padding-left: 30px;
+  justify-content: start;
   grid-area: link;
+  a {
+    display: block;
+    @media (max-width: 680px) {
+      display: inline;
+      margin-right: 10px;
+    }
+  }
 }
-
